# Classique-Ecommerce-backend-server

./: db.sqlite3  main.py  pyproject.toml
catalog/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
config/: settings.py  urls.py
users/: models.py  serializers.py  services.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_user_role.py
