[project]
name = "classiqueecommercebackendserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
]
prod = [
    "gunicorn>=25.3.0",
]
