[project]
name = "classiqueecommercebackendserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=47.0.0",
    "dj-rest-auth>=7.2.0",
    "django>=6.0.4",
    "django-allauth[openid,social]>=65.16.1",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
]
prod = [
    "gunicorn>=25.3.0",
]
